--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -10,4 +10,14 @@
   <%= @question.description %>
 </p>
 
+<h3>Answers</h3>
+
+<ul>
+  <% @question.answers.each do |answer| %>
+    <li><%= answer.description %></li>
+  <% end %>
+</ul>
+
+<%= render "/answers/form" %>
+
 <%= link_to 'Back', questions_path %>
