--- a/app/views/questions/edit.html.erb
+++ b/app/views/questions/edit.html.erb
@@ -1,2 +1,6 @@
-<h1>Questions#edit</h1>
-<p>Find me in app/views/questions/edit.html.erb</p>
+<h1>Edit Question</h1>
+
+<%= render 'form' %>
+
+<%= link_to 'Delete Question', question_path(@question.id), method: :delete %>
+<%= link_to 'Back', question_path(@question.id) %>
