--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -20,4 +20,6 @@
 
 <%= render "/answers/form" %>
 
+<%= link_to 'Edit Question', edit_question_path(@question.id) %>
+<%= link_to 'Delete Question', question_path(@question.id), method: :delete %>
 <%= link_to 'Back', questions_path %>
