--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -7,14 +7,14 @@
 
 <p>
   <strong>Description:</strong>
-  <%= @question.description %>
+  <%= render_safe_markdown(@question.description) %>
 </p>
 
 <h3>Answers</h3>
 
 <ul>
   <% @question.answers.each do |answer| %>
-    <li><%= answer.description %></li>
+    <li><%= render_safe_markdown(answer.description) %></li>
   <% end %>
 </ul>
 
