--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -7,7 +7,7 @@
     <%- unless @questions.empty? -%>
         <%- @questions.each do |question| -%>
         <ul>
-          <li><%= link_to question.title, question_path(question.id) %></li>
+          <li><%= link_to question.title, question_path(question) %></li>
         </ul>
         <%- end -%>
     <%- end -%>
