--- a/app/views/answers/_form.html.erb
+++ b/app/views/answers/_form.html.erb
@@ -1,7 +1,7 @@
 <%= form_for [@question, @answer] do |f| %>
   <% if @answer.errors.any? %>
     <div id="error_explanation">
-      <h2><%= pluralize(@answer.errors.count, "error") %> prohibited this question from being saved:</h2>
+      <h2><%= pluralize(@answer.errors.count, "error") %> prohibited this answer from being saved:</h2>
 
       <ul>
       <% @answer.errors.full_messages.each do |message| %>
