--- a/app/views/questions/edit.html.erb
+++ b/app/views/questions/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Delete Question', question_path(@question.id), method: :delete %>
-<%= link_to 'Back', question_path(@question.id) %>
+<%= link_to 'Delete Question', question_path(@question), method: :delete %>
+<%= link_to 'Back', question_path(@question) %>
