--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -1,5 +1,3 @@
-<p id="notice"><%= notice %></p>
-
 <p>
   <strong>Name:</strong>
   <%= @question.title %>
@@ -19,16 +17,23 @@
         <strong>Accepted Answer: </strong>
       <% end %>
       <%= render_safe_markdown(answer.description) %>
-      <%= link_to 'Accept Answer', question_answer_path(@question, answer),
-        method: :patch,
-        id: "answer_#{answer.id}"
-      %>
+      <% if owner_of?(@question) %>
+        <%= link_to 'Accept Answer', question_answer_path(@question, answer),
+          method: :patch,
+          id: "answer_#{answer.id}"
+        %>
+      <% end %>
     </li>
   <% end %>
 </ul>
 
 <%= render "/answers/form" %>
 
-<%= link_to 'Edit Question', edit_question_path(@question.id) %>
-<%= link_to 'Delete Question', question_path(@question.id), method: :delete %>
+<% if owner_of?(@question) %>
+  <%= link_to 'Edit Question', edit_question_path(@question) %>
+  <%= link_to 'Delete Question', question_path(@question),
+    method: :delete
+  %>
+<% end %>
+
 <%= link_to 'Back', questions_path %>
